--- a/project/payment-request-store/src/main/build.gradle
+++ b/project/payment-request-store/src/main/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     api 'javax.persistence:javax.persistence-api:2.2'
     
     implementation 'org.hibernate:hibernate-core:5.4.32.Final'
+    implementation 'org.flywaydb:flyway-core:8.5.13'
+    implementation 'org.flywaydb:flyway-mysql:8.5.13'
     runtimeOnly 'org.postgresql:postgresql:42.2.23'
     
     testImplementation 'org.springframework:spring-test:5.3.10'
