successfully build for payment-request-store and payment-notification-service

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ project/payment-notification-service/backend/build/tmp
 project/payment-processing-service/backend/.gradle
 project/payment-request-store/.gradle
 project/payment-request-store/build
+project/payment-notification-service/backend/build
