--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,11 @@ project/payment-processing-service/backend/.gradle
 project/payment-request-store/.gradle
 project/payment-request-store/build
 project/payment-notification-service/backend/build
+project/data-preparation/default/.ssh_tunnel
+project/data-preparation/mage_data
+payment-request-store-build.gradle.txt
+docker-compose.yml.txt
+project-build.gradle.txt
+project/payment-notification-service/backend/payment-nofication-backend-service-build.gradle.txt
+project/payment-notification-service/backend/payment-notification-backend-service-Dockerfile.txt
+project/payment-notification-service/backend/payment-notification-service.txt
