--- a/project/payment-request-store/src/main/resources/application-dev.yaml
+++ b/project/payment-request-store/src/main/resources/application-dev.yaml
@@ -4,8 +4,7 @@ spring:
     username: your_username
     password: your_password
     driver-class-name: org.postgresql.Driver
-
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
+    show-sql: true
