--- a/project/payment-notification-service/backend/build.gradle
+++ b/project/payment-notification-service/backend/build.gradle
@@ -1,9 +1,11 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.5'
-    id 'io.spring.dependency-management' version '1.1.0'
-    id 'com.bmuschko.docker-remote-api' version '7.1.0'
+    id 'org.springframework.boot' version '3.1.5' 
+    id 'io.spring.dependency-management' version '1.1.3'
 }
+
+group = 'cp630oc.paymentrequeststore'
+version = '0.0.1'
 
 java {
     toolchain {
@@ -17,12 +19,19 @@ repositories {
 
 dependencies {
     implementation project(':payment-request-store')
+
+    // Spring Boot starters
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.thymeleaf:thymeleaf-spring5:3.0.12.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'com.sun.mail:jakarta.mail:2.0.1'
+
+    // Database 
+    implementation 'org.postgresql:postgresql:42.6.0'
+
+    // Thymeleaf template engine
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
@@ -41,17 +50,5 @@ jar {
 }
 
 springBoot {
-    mainClass = 'cp630oc.notification.Application'
+    mainClass = 'cp630oc.paymentnotificationservice.Application'
 }
-
-// import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
-
-// task buildDockerImage(type: DockerBuildImage) {
-//     dependsOn bootJar
-//     inputDir = file('.')
-//     images.add('cp630oc-payment-notification-service:latest')
-// }
-
-// tasks.named('build') {
-//     dependsOn buildDockerImage
-// }
