--- a/project/payment-notification-service/backend/src/main/resources/application-dev.yml
+++ b/project/payment-notification-service/backend/src/main/resources/application-dev.yml
@@ -2,6 +2,17 @@ server:
   port: "8080"
 
 spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/your_database
+    username: your_username
+    password: your_password
+    driver-class-name: org.postgresql.Driver
+  flyway:
+    enabled: false
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
   mail:
     host: localhost
     port: 1025
@@ -11,3 +22,20 @@ spring:
           auth: false
           starttls:
             enable: false
+  main: 
+    debug: true
+  prifiles:
+    active: dev
+    
+logging:
+  level:
+    root: INFO
+    org.springframework: INFO
+    org.hibernate: ERROR
+    com.zaxxer.hikari: ERROR
+    org.postgresql: ERROR
+    org.apache.catalina.core.AprLifecycleListener: ERROR
+    org.apache.tomcat.util.compat.Jre18Compat: ERROR
+    org.apache.tomcat.util.compat.Jre19Compat: ERROR
+    org.apache.tomcat.util.compat.Jre21Compat: ERROR
+    org.apache.tomcat.util.compat.Jre22Compat: ERROR
