--- a/project/payment-processing-service/backend/Dockerfile
+++ b/project/payment-processing-service/backend/Dockerfile
@@ -11,19 +11,14 @@ COPY build/libs/app.jar app.jar
 # Stage 2: Create the final image using OpenJDK 21
 FROM openjdk:17-jdk-alpine
 
-# Install PostgreSQL client
-RUN apk add --no-cache postgresql-client
-
 # Set the working directory in the container
 WORKDIR /app
 
 # Copy the JAR file from the builder stage
 COPY --from=builder /app/app.jar app.jar
-COPY wait-for-it.sh wait-for-it.sh
-RUN chmod +x wait-for-it.sh
 
 # Expose the port the app runs on
 EXPOSE 8080
 
 # Run the jar file
-ENTRYPOINT ["./wait-for-it.sh", "db", "java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
