--- a/project/payment-request-store/build.gradle
+++ b/project/payment-request-store/build.gradle
@@ -1,9 +1,3 @@
-// plugins {
-//     id 'java-library'
-//     id 'maven-publish'
-//     id 'base'
-// }
-
 plugins {
     id 'java'
     id 'java-library'
@@ -15,17 +9,17 @@ repositories {
 }
 
 dependencies {
-    api 'org.springframework:spring-context:5.3.10'
-    api 'org.springframework:spring-orm:5.3.10'
-    api 'org.springframework.data:spring-data-jpa:2.5.4'
-    api 'javax.persistence:javax.persistence-api:2.2'
+    api 'org.springframework:spring-context:6.0.13'
+    api 'org.springframework:spring-orm:6.0.13'
+    api 'org.springframework.data:spring-data-jpa:3.1.5'
+    api 'jakarta.persistence:jakarta.persistence-api:3.1.0'
     
-    implementation 'org.hibernate:hibernate-core:5.4.32.Final'
-    implementation 'org.flywaydb:flyway-core:8.5.13'
-    implementation 'org.flywaydb:flyway-mysql:8.5.13'
-    runtimeOnly 'org.postgresql:postgresql:42.2.23'
+    implementation 'org.hibernate.orm:hibernate-core:6.2.13.Final'
+    implementation 'org.flywaydb:flyway-core:9.16.0'
+    // implementation 'org.flywaydb:flyway-postgresql:9.16.0'
+    runtimeOnly 'org.postgresql:postgresql:42.6.0'
     
-    testImplementation 'org.springframework:spring-test:5.3.10'
+    testImplementation 'org.springframework:spring-test:6.0.13'
     testImplementation 'junit:junit:4.13.2'
 }
 
