docker build testing

--- a/project/data-preparation/Dockerfile
+++ b/project/data-preparation/Dockerfile
@@ -8,8 +8,13 @@ ENV CLUSTER_TYPE=""
 ENV DBT_DOCS_INSTANCE=""
 ENV MANAGE_INSTANCE="" 
 
-COPY ./default /home/src/default
-COPY ./run_app.sh /app/run_app.sh
+RUN mkdir -p /app
+WORKDIR /app
+
+COPY default /home/src/default
+COPY run_app.sh /app/run_app.sh
+
+RUN ls -l
 
 RUN chmod +x /app/run_app.sh
 RUN pip install --upgrade pip
@@ -17,4 +22,5 @@ RUN pip install kagglehub
 
 
 # Start Mage AI development server
-CMD ["/bin/sh", "-c", "/app/run_app.sh"]
+# CMD ["/bin/sh", "-c", "/app/run_app.sh", "mageai", "start", "default"]
+CMD ["pwd;", "ls", "-l", "/app;"]
