--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ project-build.gradle.txt
 project/payment-notification-service/backend/payment-nofication-backend-service-build.gradle.txt
 project/payment-notification-service/backend/payment-notification-backend-service-Dockerfile.txt
 project/payment-notification-service/backend/payment-notification-service.txt
+project/build/reports/problems/problems-report.html
