--- a/project/data-preparation/Dockerfile
+++ b/project/data-preparation/Dockerfile
@@ -1,5 +1,7 @@
 FROM mageai/mageai:latest
 
+ARG CACHEBUST=1
+
 ENV PROJECT_PATH=/default
 ENV USER_CODE_PATH=/default
 ENV PROJECT_TYPE=standalone
@@ -8,19 +10,14 @@ ENV CLUSTER_TYPE=""
 ENV DBT_DOCS_INSTANCE=""
 ENV MANAGE_INSTANCE="" 
 
-RUN mkdir -p /app
 WORKDIR /app
-
-COPY default /home/src/default
-COPY run_app.sh /app/run_app.sh
-
+COPY run_app.sh run_app.sh
+RUN chmod +x run_app.sh
+RUN pwd
 RUN ls -l
 
-RUN chmod +x /app/run_app.sh
 RUN pip install --upgrade pip
 RUN pip install kagglehub
 
-
 # Start Mage AI development server
-# CMD ["/bin/sh", "-c", "/app/run_app.sh", "mageai", "start", "default"]
-CMD ["pwd;", "ls", "-l", "/app;"]
+CMD ["/app/run_app.sh"]
