--- a/project/payment-notification-service/backend/Dockerfile
+++ b/project/payment-notification-service/backend/Dockerfile
@@ -1,5 +1,7 @@
 FROM openjdk:17-jdk-alpine
 
+ARG CACHEBUST=1
+
 # Install PostgreSQL client
 RUN apk add --no-cache postgresql-client
 
@@ -8,8 +10,12 @@ WORKDIR /app
 
 # Copy the build output to the container
 COPY ./build/libs/app.jar app.jar
+COPY ./wait-for-it.sh wait-for-it.sh
+RUN chmod +x wait-for-it.sh
+RUN pwd
+RUN ls
 
 # Expose the port the app runs on
 EXPOSE 8080
 
-CMD ["java", "-jar", "app.jar"]
+CMD ["/app/wait-for-it.sh", "db", "java", "-jar", "app.jar"]
