Read kaggle dataset

--- a/project/data-preparation/Dockerfile
+++ b/project/data-preparation/Dockerfile
@@ -1,9 +1,9 @@
-FROM mageai/mageai:latest
+FROM mageai/mageai:0.9.74
 
 ARG CACHEBUST=1
 
-ENV PROJECT_PATH=/default
-ENV USER_CODE_PATH=/default
+ENV PROJECT_PATH=/home/src/default
+ENV USER_CODE_PATH=/home/src/default
 ENV PROJECT_TYPE=standalone
 ENV PROJECT_UUID="default"
 ENV CLUSTER_TYPE=""
@@ -11,7 +11,7 @@ ENV DBT_DOCS_INSTANCE=""
 ENV MANAGE_INSTANCE="" 
 
 WORKDIR /app
-COPY run_app.sh run_app.sh
+COPY run_app.sh /app/run_app.sh
 RUN chmod +x run_app.sh
 RUN pwd
 RUN ls -l
