--- a/project/data-preparation/default/pipelines/data_preparation_pipeline/metadata.yaml
+++ b/project/data-preparation/default/pipelines/data_preparation_pipeline/metadata.yaml
@@ -24,14 +24,15 @@ blocks:
   configuration:
     file_source:
       path: data_loaders/customer_data_csv.py
-  downstream_blocks: []
+  downstream_blocks:
+  - customer_transformer
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
   name: customer_data_csv
   retry_config: null
-  status: updated
+  status: executed
   timeout: null
   type: data_loader
   upstream_blocks:
@@ -49,7 +50,7 @@ blocks:
   language: python
   name: card_data_csv
   retry_config: null
-  status: updated
+  status: executed
   timeout: null
   type: data_loader
   upstream_blocks:
@@ -67,24 +68,57 @@ blocks:
   language: python
   name: transaction_data_csv
   retry_config: null
-  status: updated
+  status: executed
   timeout: null
   type: data_loader
   upstream_blocks:
   - kaggle_dataset
   uuid: transaction_data_csv
+- all_upstream_blocks_executed: true
+  color: null
+  configuration: {}
+  downstream_blocks:
+  - customer_db_table
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: customer_transformer
+  retry_config: null
+  status: executed
+  timeout: null
+  type: transformer
+  upstream_blocks:
+  - customer_data_csv
+  uuid: customer_transformer
+- all_upstream_blocks_executed: true
+  color: null
+  configuration: {}
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: customer_db_table
+  retry_config: null
+  status: updated
+  timeout: null
+  type: data_exporter
+  upstream_blocks:
+  - customer_transformer
+  uuid: customer_db_table
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
 conditionals: []
-created_at: '2024-11-26 11:32:17.377539+00:00'
+created_at: '2024-11-26 21:24:29.925679+00:00'
 data_integration: null
 description: null
 executor_config: {}
 executor_count: 1
 executor_type: null
 extensions: {}
-name: data_loading_pipeline
+name: data_preparation_pipeline
 notification_config: {}
 remote_variables_dir: null
 retry_config: {}
@@ -94,6 +128,6 @@ settings:
 spark_config: {}
 tags: []
 type: python
-uuid: data_loading_pipeline
+uuid: data_preparation_pipeline
 variables_dir: /home/src/mage_data/default
 widgets: []
