--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -66,8 +66,8 @@ services:
     networks:
       - public-network
     volumes:
-      - ./data-preparation:/home/src
-      - ./fraud-detection-onnx/hz-onnx-debian:/home/src/default/hz-onnx-debian:ro
+      - ./data-preparation/default:/home/src/default
+      - mageai-data:/home/src/mage_data
     
 networks:
   public-network:
@@ -76,3 +76,4 @@ networks:
 volumes:
   minio-data:
   pg-data:
+  mageai-data:
