--- a/project/data-preparation/default/pipelines/data_preparation_pipeline/metadata.yaml
+++ b/project/data-preparation/default/pipelines/data_preparation_pipeline/metadata.yaml
@@ -6,8 +6,6 @@ blocks:
       path: data_loaders/kaggle_dataset.py
   downstream_blocks:
   - customer_data_csv
-  - card_data_csv
-  - harmonic_treasure
   executor_config: null
   executor_type: local_python
   has_callback: false
@@ -22,16 +20,18 @@ blocks:
 - all_upstream_blocks_executed: true
   color: null
   configuration:
+    file_name: sd254_users.csv
     file_source:
       path: data_loaders/customer_data_csv.py
+    table_name: customers
   downstream_blocks:
-  - customer_transformer
+  - card_data_csv
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
   name: customer_data_csv
-  retry_config: null
+  retry_config: {}
   status: executed
   timeout: null
   type: data_loader
@@ -41,158 +41,49 @@ blocks:
 - all_upstream_blocks_executed: true
   color: null
   configuration:
+    file_name: sd254_cards.csv
     file_source:
       path: data_loaders/card_data_csv.py
+    table_name: cards
   downstream_blocks:
-  - card_transformer
+  - txn_data_csv
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
   name: card_data_csv
-  retry_config: null
+  retry_config: {}
   status: executed
   timeout: null
   type: data_loader
   upstream_blocks:
-  - kaggle_dataset
+  - customer_data_csv
   uuid: card_data_csv
 - all_upstream_blocks_executed: true
   color: null
   configuration:
+    file_name: credit_card_transactions-ibm_v2.csv
     file_source:
-      path: transformers/customer_transformer.py
-  downstream_blocks:
-  - customer_dbtable_exporter
-  executor_config: null
-  executor_type: local_python
-  has_callback: false
-  language: python
-  name: customer_transformer
-  retry_config: null
-  status: executed
-  timeout: null
-  type: transformer
-  upstream_blocks:
-  - customer_data_csv
-  uuid: customer_transformer
-- all_upstream_blocks_executed: true
-  color: null
-  configuration:
-    file_source:
-      path: transformers/card_transformer.py
-  downstream_blocks:
-  - card_dbtable_exporter
-  executor_config: null
-  executor_type: local_python
-  has_callback: false
-  language: python
-  name: card_transformer
-  retry_config: null
-  status: updated
-  timeout: null
-  type: transformer
-  upstream_blocks:
-  - card_data_csv
-  uuid: card_transformer
-- all_upstream_blocks_executed: true
-  color: null
-  configuration:
-    file_source:
-      path: data_exporters/customer_dbtable_exporter.py
+      path: data_loaders/txn_data_csv.py
+    table_name: transactions
   downstream_blocks: []
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
-  name: customer_dbtable_exporter
-  retry_config: null
-  status: executed
-  timeout: null
-  type: data_exporter
-  upstream_blocks:
-  - customer_transformer
-  uuid: customer_dbtable_exporter
-- all_upstream_blocks_executed: false
-  color: null
-  configuration:
-    file_source:
-      path: data_exporters/card_dbtable_exporter.py
-  downstream_blocks: []
-  executor_config: null
-  executor_type: local_python
-  has_callback: false
-  language: python
-  name: card_dbtable_exporter
-  retry_config: null
-  status: executed
-  timeout: null
-  type: data_exporter
-  upstream_blocks:
-  - card_transformer
-  uuid: card_dbtable_exporter
-- all_upstream_blocks_executed: true
-  color: null
-  configuration:
-    data_provider: postgres
-    data_provider_profile: db
-    disable_output_preview: true
-    export_write_policy: append
-  downstream_blocks:
-  - transaction_transformer
-  executor_config: null
-  executor_type: local_python
-  has_callback: false
-  language: python
-  name: harmonic treasure
+  name: txn_data_csv
   retry_config: {}
-  status: executed
+  status: updated
   timeout: null
   type: data_loader
   upstream_blocks:
-  - kaggle_dataset
-  uuid: harmonic_treasure
-- all_upstream_blocks_executed: true
-  color: null
-  configuration:
-    disable_output_preview: true
-    file_source:
-      path: transformers/transaction_transformer.py
-  downstream_blocks:
-  - cosmic_elixir
-  executor_config: null
-  executor_type: local_python
-  has_callback: false
-  language: python
-  name: transaction_transformer
-  retry_config: {}
-  status: updated
-  timeout: null
-  type: transformer
-  upstream_blocks:
-  - harmonic_treasure
-  uuid: transaction_transformer
-- all_upstream_blocks_executed: false
-  color: null
-  configuration: {}
-  downstream_blocks: []
-  executor_config: null
-  executor_type: local_python
-  has_callback: false
-  language: python
-  name: cosmic elixir
-  retry_config: null
-  status: not_executed
-  timeout: null
-  type: data_exporter
-  upstream_blocks:
-  - transaction_transformer
-  uuid: cosmic_elixir
+  - card_data_csv
+  uuid: txn_data_csv
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
 conditionals: []
-created_at: '2024-11-28 00:56:35.831114+00:00'
+created_at: '2024-11-29 16:18:59.033381+00:00'
 data_integration: null
 description: null
 executor_config: {}
@@ -210,5 +101,7 @@ spark_config: {}
 tags: []
 type: python
 uuid: data_preparation_pipeline
+variables:
+  file_path: /root/.cache/kagglehub/datasets/ealtman2019/credit-card-transactions/versions/8
 variables_dir: /home/src/mage_data/default
 widgets: []
