--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -1,18 +1,18 @@
 services:
-  # minio:
-  #   image: minio/minio:latest
-  #   container_name: minio
-  #   ports:
-  #     - "9000:9000"  # MinIO API
-  #     - "9001:9001"  # MinIO Console
-  #   networks:
-  #     - public-network
-  #   volumes: 
-  #     - minio-data:/data
-  #   environment:
-  #     MINIO_ROOT_USER: minioadmin
-  #     MINIO_ROOT_PASSWORD: minioadmin
-  #   command: server /data --console-address :9001
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000"  # MinIO API
+      - "9001:9001"  # MinIO Console
+    networks:
+      - public-network
+    volumes: 
+      - minio-data:/data
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    command: server /data --console-address :9001
 
   mailhog:
     image: mailhog/mailhog
@@ -24,7 +24,7 @@ services:
     restart: always
 
   db: 
-    image: postgres:13
+    image: postgres:16
     container_name: postgres
     ports:
       - "5432:5432"
@@ -54,6 +54,12 @@ services:
       SPRING_PROFILES_ACTIVE: "dev"
       SPRING_MAIL_HOST: "mailhog"
       SPRING_MAIL_PORT: "1025"
+      POSTGRES_HOST: "db"
+      POSTGRES_PORT: 5432
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_DB: "postgres"
+      POSTGRES_SCHEMA: "public"
     depends_on:
       - db
   mageai:
@@ -67,14 +73,18 @@ services:
       - public-network
     volumes:
       - ./data-preparation/default:/home/src/default
-      - mageai-data:/home/src/mage_dat
+      - mageai-data:/home/src/mage_data
     environment:
       POSTGRES_HOST: "db"
-      POSTGRES_PORT: "5432"
+      POSTGRES_PORT: 5432
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "postgres"
       POSTGRES_DB: "postgres"
       POSTGRES_SCHEMA: "public"
+      MINIO_ENDPOINT: "minio:9000"
+      MINIO_ACCESS_KEY: "pXvDu4WNMZyqLbCNbeJB"
+      MINIO_SECRET_KEY: "pocMOObTazz4dI1BBUjX18wp9iFHz3Kk7fls0Y0m"
+      MINIO_BUCKET: "test"
     
 networks:
   public-network:
