--- a/project/payment-solution/build.gradle
+++ b/project/payment-solution/build.gradle
@@ -21,6 +21,9 @@ repositories {
 }
 
 dependencies {
+    // ONNX Runtime
+    implementation 'com.microsoft.onnxruntime:onnxruntime:1.16.3'
+
     // Spring Boot starters
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
@@ -40,8 +43,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
-    // Testing
+    // ONNIX
+    implementation 'com.microsoft.onnxruntime:onnxruntime:1.16.3'
+
+    // Test dependencies
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mockito:mockito-core:5.3.1'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
 }
 
 openApiGenerate {
