--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -58,6 +58,10 @@ services:
       POSTGRES_PASSWORD: "postgres"
       POSTGRES_DB: "postgres"
       POSTGRES_SCHEMA: "public"
+      MODEL_PATH: "/model/lightgbm_fraud_detector.onnx"
+      ENCODER_MAPPING_DIR: "/model" 
+    volumes:
+      - ./model:/model
     depends_on:
       - db
   mageai:
