load scalar_params.json and add normalizeValue method

--- a/project/payment-solution/src/main/resources/payment-solution-apis.yaml
+++ b/project/payment-solution/src/main/resources/payment-solution-apis.yaml
@@ -77,7 +77,7 @@ components:
           description: Date and time of the transaction
         transactionAmount:
           type: number
-          format: double
+          format: float
           description: Amount of the transaction
         transactionType:
           type: string
