--- a/project/payment-solution/src/main/resources/payment-solution-apis.yaml
+++ b/project/payment-solution/src/main/resources/payment-solution-apis.yaml
@@ -144,6 +144,13 @@ components:
         transactionError:
           type: string
           description: Error message if the transaction failed  
+        fraudProbability:
+          type: number
+          format: float
+          description: Probability of fraud
+        fraudDetected:
+          type: boolean
+          description: Indicates if fraud was detected
         transactionStatus:
           type: string
           description: Status of the transaction (e.g., approved, declined)
